feat: Add email templating

--- a/src/main/assets/lambda_cognito_messaging/email_templates/resetPassword.html
+++ b/src/main/assets/lambda_cognito_messaging/email_templates/resetPassword.html
@@ -161,7 +161,7 @@ table, td { color: #17324d; } #u_body a { color: #0073e6; text-decoration: under
         
   <div style="word-wrap: break-word;">
     <p >è stato chiesto un ripristino della password per questa utenza sul </p>
-<p>portale di monitoraggio e-service di <strong>PDND Interoperabilità</strong>. <span style="color: #0073e6; line-height: 30.6px;"><a rel="noopener" href="" target="_blank" style="color: #0073e6;">Clicca qui</a></span></p>
+<p>portale di monitoraggio e-service di <strong>PDND Interoperabilità</strong>. <span style="color: #0073e6; line-height: 30.6px;"><a rel="noopener" href="<%- fe_url %><%- reset_password_route %>#code=<%- reset_code %>&<%- username %>" target="_blank" style="color: #0073e6;">Clicca qui</a></span></p>
 <p>per inserire la nuova password e completare la procedura.</p>
 <p> </p>
 <p>Se hai problemi tecnici o domande in merito al funzionamento del</p>
